domain/src/main/java/ir/example/newstest/domain/error/UnAuthorizedException.kt
package ir.example.newstest.domain.error

class UnAuthorizedException : RuntimeException()